name:             repl-check
version:          0.1.0.0
synopsis:         Test interactive Haskell examples
description:      The repl-check program checks a file containing a GHCi transcript.
                  It is a fork of doctest, which the same thing with Haskell comments.
category:         Testing
bug-reports:      https://github.com/chris-martin/repl-check/issues
homepage:         https://github.com/chris-martin/repl-check#readme
license:          MIT
license-file:     LICENSE
copyright:        (c) 2009-2017 Simon Hengel, 2017 Chris Martin
author:           Chris Martin <ch.martin@gmail.com>
maintainer:       Chris Martin <ch.martin@gmail.com>
build-type:       Simple
cabal-version:    >= 1.8
extra-source-files: example/example.cabal
                  , example/src/Example.hs

source-repository head
  type: git
  location: https://github.com/chris-martin/repl-check

library
  exposed-modules:
      Test.DocTest
  ghc-options:
      -Wall
  hs-source-dirs:
      src, ghci-wrapper/src
  other-modules:
      Extract
    , GhcUtil
    , Interpreter
    , Location
    , Options
    , PackageDBs
    , Parse
    , Paths_repl_check
    , Property
    , Runner
    , Runner.Example
    , Run
    , Util
    , Sandbox
    , Language.Haskell.GhciWrapper
  build-depends:
      base          == 4.*
    , base-compat   >= 0.7.0
    , ghc           >= 7.0 && < 8.4
    , syb           >= 0.3
    , code-page     >= 0.1
    , deepseq
    , directory
    , filepath
    , process
    , ghc-paths     >= 0.1.0.9
    , transformers

executable repl-check
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded
  hs-source-dirs:
      driver
  build-depends:
      base          == 4.*
    , repl-check
